# src/Routes/user.routes.js
@@ -1,8 +1,9 @@
 const express = require("express");
 const router = express.Router();
-const { getAllUsers } = require("../Controllers/user.controller");
+const { getAllUsers, updateUserStatus } = require("../Controllers/user.controller");
 
 router.get("/", getAllUsers);
+router.patch("/:id/status", updateUserStatus);
 
 
 module.exports = router;
